cmake_minimum_required(VERSION 3.14)
project(eia_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(eia INTERFACE)
target_include_directories(eia INTERFACE include)
add_executable(test_eia tests/test_eia.cpp)
target_link_libraries(test_eia eia)
enable_testing()
add_test(NAME eia COMMAND test_eia)
